# ai4-template

./: README.md  cookiecutter.json  requirements.txt
.github/workflows/: version-update.yml
DC-OC-{{ cookiecutter.repo_name }}/: Dockerfile
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
{{ cookiecutter.__repo_name }}/: .stestr.conf  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  VERSION  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
{{ cookiecutter.__repo_name }}/.sqa/: config.yml  docker-compose.yml
{{ cookiecutter.__repo_name }}/DEEP-OC-{{ cookiecutter.__repo_name }}/: Dockerfile  README.md  metadata.json
{{ cookiecutter.__repo_name }}/tests/: test_api.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__app_name }}/: api.py  config.py  misc.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/: api.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/tests/: test_api.py
{{ cookiecutter.repo_name }}/: .dockerignore  .env  .stestr.conf  Jenkinsfile  Makefile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{ cookiecutter.repo_name }}/DEEP-OC-{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  Jenkinsfile  README.md  check_docker_start.sh  docker-compose.yml  metadata.json  submit_orchent_tmpl.sh
{{ cookiecutter.repo_name }}/DEEP-OC-{{ cookiecutter.repo_name }}/jupyter/: run_jupyter.sh
{{ cookiecutter.repo_name }}/docker/: Dockerfile  Dockerfile.dev  Dockerfile.test  Dockerfile.tests
{{ cookiecutter.repo_name }}/notebooks/: 1.0-{{ cookiecutter.repo_name }}_start.ipynb  1.0-{{ cookiecutter.repo_name }}_start.py2.ipynb
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: __init__.py  api.py  config.py  misc.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/dataset/: make_dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/features/: build_features.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/models/: deep_api.py  deepaas_api.py  model.py  train_model.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/tests/: test_api.py  test_unit_model.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/visualization/: visualize.py
