[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__repo_name }}"
authors = [
{%- set names = cookiecutter.author_name.split(',') -%}
{%- set emails = cookiecutter.author_email.split(',') -%}
{%- for i in range(0, names|length) %}
    { name = "{{ names[i].strip() }}", email = "{{ emails[i].strip() }}" },
{%- endfor %}
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.8"
license = "{{ cookiecutter.open_source_license }}"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "{{ cookiecutter.__git_base_url }}/{{ cookiecutter.__repo_name }}"
"Bug Tracker" = "{{ cookiecutter.__git_base_url }}/{{ cookiecutter.__repo_name }}/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "{{ cookiecutter.__app_name|upper }}_DATA_PATH=tests/data",
    "{{ cookiecutter.__app_name|upper }}_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "{{ cookiecutter.__app_name }}" ]

[tool.setuptools.package-dir]
"{{ cookiecutter.__app_name }}" = "{{ cookiecutter.__app_name }}"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
{{ cookiecutter.__app_name }} = "{{ cookiecutter.__app_name }}.api"