[metadata]
name = {{ cookiecutter.repo_name }}
summary = {{ cookiecutter.description }}
description-file =
    README.md
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
version = {{ cookiecutter.app_version }}
license = {{ cookiecutter.open_source_license }}
home-page = http://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.repo_name }}
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
{% if cookiecutter.python_interpreter == 'python' %}
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
{% elif cookiecutter.python_interpreter == 'python3' %}
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
{% endif %}

[files]
packages =
    {{ cookiecutter.repo_name }}

[entry_points]

deepaas.model = 
    {{ cookiecutter.repo_name }} = {{ cookiecutter.repo_name }}.models.model

