# -*- coding: utf-8 -*-
[metadata]
name = {{ cookiecutter.repo_name }}
summary = {{ cookiecutter.description }}
description-file =
    README.md
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
version = {{ cookiecutter.app_version }}
license = {{ cookiecutter.open_source_license }}
home-page = {{ cookiecutter.git_base_url }}/{{ cookiecutter.repo_name }}
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    {{ cookiecutter.repo_name }}

[entry_points]

deepaas.v2.model = 
    {{ cookiecutter.repo_name }} = {{ cookiecutter.repo_name }}.models.deep_api

